--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   dio: ^4.0.6
   connectivity_plus: ^2.3.0
   url_launcher: ^6.1.9
+  intl_phone_field: ^3.1.0
+  flutter_typeahead: ^4.3.7
 
 dev_dependencies:
   flutter_test:
