--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,8 +44,11 @@ dependencies:
   dio: ^4.0.6
   connectivity_plus: ^2.3.0
   url_launcher: ^6.1.9
+  device_preview: 1.1.0
   intl_phone_field: ^3.1.0
   flutter_typeahead: ^4.3.7
+  flutter_advanced_drawer: ^1.3.4
+  flutter_neumorphic:
 
 dev_dependencies:
   flutter_test:
